<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/app_botonmenu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnRegistrarFutbolista"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:backgroundTint="#00A2B6"
        android:onClick="ActivityIngresarNuevoFutbolista"
        android:text="@string/app_btningresar"
        android:textSize="15sp" />

    <Button
        android:id="@+id/BtnLista"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:backgroundTint="#00A2B6"
        android:onClick="ActivityListFutbolista"
        android:text="@string/app_btnlista"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="398dp"
        android:layout_gravity="bottom"
        android:fontFamily="sans-serif-black"
        android:gravity="bottom|center_horizontal"
        android:text="@string/app_examen" />

</LinearLayout>